build: gen swagger doc of user
